# Wato_Conti_Radar_Collab

./: README.md
radar_driver/: CMakeLists.txt  README.md  evaluate.sh  package.xml  plot.sh
radar_driver/data/: output.txt
radar_driver/include/: cluster.h  dbscan.h  evaluate.h  multiRadar.h  parser.h  point.h  processPacket.h  radarPublisher.h  resMultipliers.h
radar_driver/launch/: all_radar.launch  multiradarROSbag.launch  radarROSbag.launch  single_radar.launch  twoRadarROSbag.launch
radar_driver/msg/: BoundingBox.msg  BoundingBoxList.msg  EthCfg.msg  RadarPacket.msg  SensorCfg.msg
radar_driver/rviz/: multiradarPC.rviz  radarFOVline.rviz  radarPointCloud.rviz  radar_clustering.rviz  radar_testing.rviz
radar_driver/scripts/: EthCfgRx.py  SensorCfgRx.py  extract_rosbag_info.py  plot.py  publishTest.py  testPlot.py
radar_driver/src/: FilteredMain.cpp  PointCloudConverter.cpp  UnfilteredMain.cpp  cluster.cpp  dbscan.cpp  evaluate.cpp  evaluate_main.cpp  parser.cpp  point.cpp  processPacket.cpp  radarDetection.cpp  radarPublisher.cpp  radar_clustering.cpp  radar_point_detections.cpp  sniffer.cpp
radar_driver/utilities/: rename_topic.py
